# velog_auto_write

./: README.md  auto_upload.py  main copy.py  main.py  main.spec  pyproject.toml
ui/: auto_upload.ui
upload/: level1-12906.py  level1-12910.py
